--- a/Pages/EditStore.cshtml
+++ b/Pages/EditStore.cshtml
@@ -144,7 +144,7 @@
                             <div class="mb-4">
                                 <label for="ManagerJobNumber">@Model.lblManagerJobNumber</label>
                                 <input type="text" name="ManagerJobNumber" class="form-control" id="ManagerJobNumber"
-                                    value="@Model.ManagerJobNumber" /> 
+                                    value="@Model.ManagerJobNumber" readonly /> 
                             </div>
 
                             
