--- a/Pages/EditRoom.cshtml
+++ b/Pages/EditRoom.cshtml
@@ -38,6 +38,26 @@
             showErrorNotification(errorMessageFromServer);
             </text>
         }
+
+         document.getElementById("StoreId").addEventListener("change", function () {
+            const selectedOption = this.options[this.selectedIndex];
+            const storetype = selectedOption.getAttribute("data-storetype");
+            const manager = selectedOption.getAttribute("data-manager");
+
+
+            document.getElementById("StoreType").value = storetype || '';
+            document.getElementById("ManagerName").value = manager || '';
+
+        });
+        
+        document.getElementById("KeeperId").addEventListener("change", function () {
+            const selectedOption = this.options[this.selectedIndex];
+            const UserName = selectedOption.getAttribute("data-UserName");
+
+
+            document.getElementById("KeeperName").value = UserName || '';
+
+        });
     </script>
 }
 @{
@@ -82,20 +102,39 @@
                         <div class="col-lg-12 col-sm-12">
                             <input type="hidden" name="RoomId" value="@Model.RoomId" />
                             <div class="mb-4">
-                                <label for="storeNumber">@Model.lblStoreName</label>
+                                <label for="StoreId">@Model.lblStoreName</label>
                                 <select class="form-select" id="StoreId" name="StoreId">
+                                    <option value=""></option>
                                     @if (Model.Stores != null)
                                     {
                                         foreach (var item in Model.Stores)
                                         {
-                                            if(item.IsActive == 1 && item.Ended == null){
-                                                <option value="@item.StoreId" selected="@(item.StoreId == Model.SelectedStoreId)">@item.StoreName</option>
-                                            }
+                                            if(item.IsActive == 1 ){
+                                            <option value="@item.StoreId" data-storetype="@item.StoreType" data-manager="@item.WarehouseManagerName" selected="@(item.StoreId == Model.StoreId)">@item.StoreName</option>}
                                         }
                                     }
                                 </select>
                                 
                             </div>
+
+                            <div class="mb-4">
+                                <label for="StoreType">@Model.lblWarehouseType</label>
+                                <input type="text" name="StoreType" class="form-control" id="StoreType"
+                                       value="@Model.StoreType" />
+                            </div>
+
+                            <div class="mb-4">
+                                <label for="ManagerName">@Model.lblManagerName</label>
+                                <input type="text" name="ManagerName" class="form-control" id="ManagerName"
+                                       value="@Model.ManagerName" />
+                            </div>
+
+                            <div class="mb-4">
+                                <label for="BuildingNumber">@Model.lblBuildingNumber</label>
+                                <input type="text" name="BuildingNumber" class="form-control" id="BuildingNumber"
+                                       value="@Model.BuildingNumber" />
+                            </div>
+
                             <div class="mb-4">
                                 <label for="roomNumber">@Model.lblRoomNumber</label>
                                 <input type="text" name="RoomNumber" class="form-control" id="roomNumber"
@@ -104,13 +143,74 @@
                                 <!--  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
                                       else.</small> -->
                             </div>
-                            <div class="mb-4">
+
+                            @* hiding roomNumber name as it is not in ppt *@
+                            @* <div class="mb-4">
                                 <label for="roomName">@Model.lblRoomName</label>
                                 <input type="text" name="RoomName" value="@Model.RoomName" class="form-control"
                                        id="roomName">
                                 <!--   <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
                                        else.</small> -->
+                            </div> *@
+
+                            <div class="mb-4">
+                                <label for="RoomDesc">@Model.lblRoomDesc</label>
+                                <input type="text" name="RoomDesc" class="form-control" id="RoomDesc"
+                                       value="@Model.RoomDesc" />
                             </div>
+                         
+                            <div class="mb-4">
+                                <label for="NoOfShelves">@Model.lblNoOfShelves</label>
+                                <input type="number" name="NoOfShelves" class="form-control" id="NoOfShelves"
+                                       value="@Model.NoOfShelves" />
+                            </div>
+
+                             @* Warehouse Keeper JobNumber  *@
+                            <div class="mb-4">
+                                    <label class="my-1 me-2" for="KeeperId">@Model.lblKeeperJobNum</label>
+                                    <select class="form-select" id="KeeperId" name="KeeperId"
+                                        aria-label="Default select example">
+                                        <option value=""></option>
+                                        
+                                        
+                                    @if (Model.KeeperGroupsList != null)
+                                    {
+                                        foreach (var item in Model.KeeperGroupsList)
+                                        {
+                                            <option value="@item.UserId" data-UserName="@item.UserName" selected="@(item.UserId == Model.KeeperId)">@item.JobNumber</option>
+                                        }
+                                    }
+
+                                    </select>
+                            </div>
+
+                            <div class="mb-4">
+                                <label for="KeeperName">@Model.lblKeeperName</label>
+                                <input type="text" name="KeeperName" class="form-control" id="KeeperName"
+                                       value="@Model.KeeperName" readonly />
+                            </div>
+
+                             @* Room status *@
+                            <div class="mb-4">
+                                <p>@Model.lblRoomStatus</p>
+
+                                <div class="form-check">
+                                    <input id="Open" class="form-check-input" type="radio" name="Status" value="Open"   @(Model.Status == "Open" ? "checked" : "")
+                                       />
+                                    <label class="form-check-label" for="Open">
+                                        @Model.lblOpen
+                                    </label>
+                                </div>
+
+                                <div class="form-check">
+                                    <input id="Closed" class="form-check-input" type="radio" name="Status" value="Closed"  @(Model.Status == "Closed" ? "checked" : "")
+                                        />
+                                    <label class="form-check-label" for="Closed">
+                                        @Model.lblClosed
+                                    </label>
+                                </div>
+                            </div> 
+                            
                             <div class="mb-4">
 
 
