--- a/Pages/ManageRooms.cshtml
+++ b/Pages/ManageRooms.cshtml
@@ -210,9 +210,14 @@
                         <tr>
                             <th scope="col" class="border-0 rounded-start">@Model.lblStoreName</th>
                             @* <th scope="col" class="border-0">@Model.lblRoomName</th> *@
+                            <th scope="col" class="border-0">@Model.lblBuildingNumber</th>
+                            <th scope="col" class="border-0">@Model.lblRoomNumber</th>
+                            <th scope="col" class="border-0">@Model.lblRoomDesc</th>
+                            <th scope="col" class="border-0">@Model.lblNoOfShelves</th>
                             <th scope="col" class="border-0">@Model.lblShelves</th>
-                            <th scope="col" class="border-0">Keeper Name</th>
-                            <th scope="col" class="border-0">Keeper JobNumber</th>
+                            <th scope="col" class="border-0">@Model.lblKeeperName</th>
+                            <th scope="col" class="border-0">@Model.lblKeeperJobNum</th>
+                            <th scope="col" class="border-0">@Model.lblRoomStatus</th>
                             <th class="border-0 rounded-end"></th>
                         </tr>
                     </thead>
@@ -228,12 +233,17 @@
                                 <tr>
                                     <td>@item.StoreName</td>
                                     @* <td>@item.RoomName</td> *@
+                                    <td>@item.BuildingNumber</td>
+                                    <td>@item.RoomNo</td>
+                                    <td>@item.RoomDesc</td>
+                                    <td>@item.NoOfShelves</td>
                                     <td>
                                         @(string.IsNullOrWhiteSpace(item.ShelfNumber) ? "" : (item.ShelfNumber.Length > 30 ?
                                         item.ShelfNumber.Substring(0, 30) : item.ShelfNumber))
                                     </td>
                                     <td>@item.KeeperName</td>
                                     <td>@item.KeeperJobNum</td>
+                                    <td>@item.RoomStatus</td>
 
 
                                     <td>
