--- a/Pages/Requests.cshtml
+++ b/Pages/Requests.cshtml
@@ -92,7 +92,7 @@
                     <tr>
                         <td>Request for Warehouse <b>Dummy Warehouse</b> has been processed successfully.</td>
                         <td>12:35 AM</td>
-                        <td><input type="submit" value="@Model.lblView" class="btn btn-secondary" asp-page-handler="View" /></td>
+                            <td><input type="submit" value="@Model.lblView" class="btn btn-secondary" asp-page-handler="View" /><a asp-page="/ViewReceivingReport"  class="btn btn-info btn-sm">View</a></td>
                     </tr>
                     <tr>
                         <td>Request for Warehouse <b>Dummy Warehouse</b> has been processed successfully.</td>
