--- a/Pages/AddSupplier.cshtml
+++ b/Pages/AddSupplier.cshtml
@@ -88,6 +88,12 @@
                             </div>
 
                             <div class="mb-4">
+                                <label for="CoordinatorName">@Model.lblCoordinatorName</label>
+                                <input type="text" class="form-control" id="CoordinatorName" name="CoordinatorName" />
+
+                            </div>
+
+                            <div class="mb-4">
                                 <label for="SupplierPhoneNumber">@Model.lblSupplierPhoneNumber</label>
                                 <input type="text" class="form-control" id="SupplierPhoneNumber" name="SupplierPhoneNumber"
                                         />
