--- a/Pages/AddStore.cshtml
+++ b/Pages/AddStore.cshtml
@@ -117,7 +117,7 @@
                            
                             @* Warehouse manager name  *@
                             <div class="mb-4">
-                                    <label class="my-1 me-2" for="ManagerId">@Model.lblManagerName</label>
+                                    <label class="my-1 me-2" for="ManagerId">@Model.lblWarehouseManagerName</label>
                                     <select class="form-select" id="ManagerId" name="ManagerId"
                                         aria-label="Default select example">
                                         <option value=""></option>
