--- a/Pages/ManageSupplier.cshtml
+++ b/Pages/ManageSupplier.cshtml
@@ -216,6 +216,7 @@
                     <thead class="thead-light">
                         <tr>
                             <th scope="col"class="border-0 rounded-start">@Model.lblSupplierName</th>
+                            <th scope="col"class="border-0 rounded-start">@Model.lblCoordinatorName</th>
                             <th scope="col"class="border-0 rounded-start">@Model.lblConatctNumber</th>
                             <th scope="col"class="border-0 rounded-start">@Model.lblSupplierType</th>
                 <th scope="col" class="border-0 rounded-end"></th>
@@ -229,6 +230,7 @@
                 {
                     <tr>
                         <td>@item.SupplierName</td>
+                        <td>@item.CoordinatorName</td>
                         <td>@item.ConatctNumber</td>
                         <td>@item.SupplierType</td>
                         <td>
